Updated models, Update repository and service

--- a/DotnetCoding/appsettings.json
+++ b/DotnetCoding/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SERVER;Initial Catalog=DotnetCodingDB;User Id=sa;Password=test;"
+    "DefaultConnection": "Data Source=DESKTOP-RPC36SO;Initial Catalog=DotnetCodingDB;User Id=sa;Password=Digital123@;MultipleActiveResultSets=true;Encrypt=False"
   }
 }
